--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mycompany</groupId>
+	<groupId>com.mulesoft.platform_se</groupId>
 	<artifactId>openai-example-mule4</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>com.mulesoft.platform_se</groupId>
 			<artifactId>openai</artifactId>
-			<version>1.0.15</version>
+			<version>1.0.16</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
